commit change button

--- a/album.html
+++ b/album.html
@@ -124,7 +124,7 @@
 
                 <div id="center" class="col px-0 text-light vh-100">
                     <div class="sfondoDinamico">
-                        <div class="row row-cols-1">
+                        <div class="row row-cols-1 p-3">
                             <div class="col d-flex justify-content-between mb-3">
                                 <div class="d-flex">
                                     <div
@@ -188,7 +188,7 @@
                                 <div class="col d-flex align-items-center">
                                     <div class="me-4 btn-round">
                                         <button type="submit" class="btn bgSpoty w-100 h-100 rounded-circle me-2">
-                                            <i class="bi bi-play-fill fs-2 text-center mb-1"></i></button>
+                                            <i class="bi bi-play-fill fs-2 text-center mt-1"></i></button>
                                     </div>
                                     <div class="me-4">
                                         <i class="bi bi-suit-heart icon-spotify-album"></i>
