--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 </div>
 
                                 <div class="col">
-                                    <div class="row row-cols-3">
+                                    <div class="row row-cols-12 row-cols-md-3">
                                         <div class="col p-0">
                                             <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
                                                 <div class="d-flex flex-wrap card1">
@@ -430,8 +430,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <!-- <script src="assets/js/script.js"></script> -->
-    <script src="assets/js/test.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
