--- a/index.html
+++ b/index.html
@@ -421,8 +421,22 @@
         </div>
 
         <!-- PLAYER -->
-        <section id="sectionPlayer" class="position-fixed bottom-0 player-bar w-100">
+        <section id="sectionControl" class="position-fixed bottom-0 player-bar w-100 d-none">
+            <div class="container-fluid bg-dark border border-0 border-top border-1 border-secondary p-0">
+                <div class="row text-center p-2 align-items-center">
+                    <div id="sectionAlbum" class="col-2 d-flex text-secondary align-items-center">
 
+                    </div>
+                    <div id="sectionPlayer" class="col-8 text-center">
+
+                    </div>
+
+                    <div id="sectionVolume" class="col-2 volumeControll">
+
+                    </div>
+
+                </div>
+            </div>
         </section>
     </main>
 
