--- a/album.html
+++ b/album.html
@@ -30,8 +30,8 @@
                                     <a class="text-light text-decoration-none align-self-center" href="#">Home</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-2">
-                                    <i class="bi bi-search text-secondary me-3 fs-4"></i>
-                                    <a class="text-secondary text-decoration-none align-self-center" href="#">Cerca</a>
+                                    <input type="text" id="album-search" class="form-control">
+                      <button id="search-button" class="btn  ms-2"> <i class="bi bi-search text-secondary me-3 fs-4"></i>Cerca</button>
                                 </li>
                                 <li class="d-flex align-items-center mb-2">
                                     <svg width="25px" height="30px" class="me-3" viewBox="0 0 24 24"
@@ -331,7 +331,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/album.js"></script>
 </body>
 
 </html>
