--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 
                         <div class="col">
                             <ul class="text-secondary list-unstyled">
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
                             </ul>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                             </div>
                         </div>
 
-                        <div id="annunci" class="col mb-3 d-none d-lg-block">
+                        <div id="annunci" class="col mb-3 rounded-2 d-none d-lg-block">
 
                         </div>
 
