--- a/album.html
+++ b/album.html
@@ -123,7 +123,7 @@
                 <!-- CENTRO -->
 
                 <div id="center" class="col px-0 text-light vh-100">
-                    <div class="sfondoDinamico">
+                   <!-- <div class="sfondoDinamico">
                         <div class="row row-cols-1 p-3">
                             <div class="col d-flex justify-content-between mb-3">
                                 <div class="d-flex">
@@ -181,7 +181,7 @@
                         </div>
 
 
-                        <!--parte centrale- canzoni -->
+                       
 
                         <div class="container-fluid bgCenterAlbum pt-4 px-4 m-0">
                             <div class="row">
@@ -216,7 +216,7 @@
                                 </div>
                             </div>
 
-                            <!--parte centrale dinamica-->
+                        
                             <div class="row px-4 text-light my-4 fs-6 align-items-center">
                                 <div class="col-6 d-flex">
                                     <div class="col-1 px-0 me-2 mb-0 align-self-center">1</div>
@@ -251,7 +251,7 @@
                                 <div class="col-3 px-0 text-end">1.1</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
 
