--- a/album.html
+++ b/album.html
@@ -27,11 +27,13 @@
                                 <li class="text-light fs-2 mb-3">...</li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-house-door-fill text-secondary me-3 fs-4"></i>
-                                    <a class="text-light text-decoration-none align-self-center" href="#">Home</a>
+                                    <a class="text-secondary text-decoration-none align-self-center" href="index.html">Home</a>
                                 </li>
-                                <li class="d-flex align-items-center mb-2">
-                                    <input type="text" id="album-search" class="form-control">
-                      <button id="search-button" class="btn  ms-2"> <i class="bi bi-search text-secondary me-3 fs-4"></i>Cerca</button>
+                                <li class="d-flex align-items-center mb-2" id="search-container">
+                                    <button id="search-button" class="btn ms-0 px-0">
+                                        <i class="bi bi-search text-secondary me-3 fs-4">
+                                        </i></button>
+                                    <input type="search" id="album-search" class="form-control" placeholder="Cerca">
                                 </li>
                                 <li class="d-flex align-items-center mb-2">
                                     <svg width="25px" height="30px" class="me-3" viewBox="0 0 24 24"
@@ -79,23 +81,23 @@
                                 <li class="d-flex align-items-center mb-3">
                                     <div
                                         class="me-3 bg-secondary rounded-1 square d-flex justify-content-center align-items-center">
-                                        <i class="bi bi-plus fs-6 text-dark"></i>
+                                        <i class="bi bi-plus fs-6 text-dark px-3"></i>
                                     </div>
                                     <a class="text-secondary text-decoration-none align-self-center" href="#">Crea
                                         playlist</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-3">
                                     <div
-                                        class="me-3 gradient rounded-1 square d-flex justify-content-center align-items-center">
-                                        <i class="bi bi-suit-heart-fill fs-small text-light"></i>
+                                        class=" gradient rounded-1 square d-flex justify-content-center align-items-center">
+                                        <i class="bi bi-suit-heart-fill fs-small text-light px-3"></i>
                                     </div>
-                                    <a class="text-secondary text-decoration-none align-self-center" href="#">Brani che
+                                    <a class="text-secondary text-decoration-none align-self-center ms-3" href="#">Brani che
                                         ti piacciono</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-4">
                                     <div
                                         class="me-3 bgGreen rounded-1 square d-flex justify-content-center align-items-center">
-                                        <i class="bi bi-bookmark-fill fs-small green"></i>
+                                        <i class="bi bi-bookmark-fill fs-small green px-3"></i>
                                     </div>
 
                                     <a class="text-secondary text-decoration-none align-self-center" href="#">I tuoi
