--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <li class="text-light fs-2 mb-3">...</li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-house-door-fill text-secondary me-3 fs-4"></i>
-                                    <a class="text-light text-decoration-none align-self-center" href="#">Home</a>
+                                    <a class="text-light text-decoration-none align-self-center" href="index.html">Home</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-search text-secondary me-3 fs-4"></i>
@@ -79,7 +79,7 @@
                                 <li class="d-flex align-items-center mb-3">
                                     <div
                                         class="me-3 bg-secondary rounded-1 square d-flex justify-content-center align-items-center">
-                                        <i class="bi bi-plus fs-6 text-dark"></i>
+                                        <i class="bi bi-plus fs-6 text-dark px-3"></i>
                                     </div>
                                     <a class="text-secondary text-decoration-none align-self-center" href="#">Crea
                                         playlist</a>
@@ -87,7 +87,7 @@
                                 <li class="d-flex align-items-center mb-3">
                                     <div
                                         class="me-3 gradient rounded-1 square d-flex justify-content-center align-items-center">
-                                        <i class="bi bi-suit-heart-fill fs-small text-light"></i>
+                                        <i class="bi bi-suit-heart-fill fs-small text-light px-3"></i>
                                     </div>
                                     <a class="text-secondary text-decoration-none align-self-center" href="#">Brani che
                                         ti piacciono</a>
@@ -95,7 +95,7 @@
                                 <li class="d-flex align-items-center mb-4">
                                     <div
                                         class="me-3 bgGreen rounded-1 square d-flex justify-content-center align-items-center">
-                                        <i class="bi bi-bookmark-fill fs-small green"></i>
+                                        <i class="bi bi-bookmark-fill fs-small green px-3"></i>
                                     </div>
 
                                     <a class="text-secondary text-decoration-none align-self-center" href="#">I tuoi
