--- a/index.html
+++ b/index.html
@@ -299,66 +299,8 @@
                             <p class="fs-5 fw-bold">Altro di ciò che ti piace</p>
                         </div>
                         <div class="col">
-                            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-3">
-                                <div class="col">
-                                    <div class="card p-3 bg-black text-secondary">
-                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-light">Card title</h5>
-                                            <p class="card-text">Some quick example text to build...</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col">
-                                    <div class="card p-3 bg-black text-secondary">
-                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-light">Card title</h5>
-                                            <p class="card-text">Some quick example text to build...</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col">
-                                    <div class="card p-3 bg-black text-secondary">
-                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-light">Card title</h5>
-                                            <p class="card-text">Some quick example text to build...</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col">
-                                    <div class="card p-3 bg-black text-secondary">
-                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-light">Card title</h5>
-                                            <p class="card-text">Some quick example text to build...</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col">
-                                    <div class="card p-3 bg-black text-secondary">
-                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-light">Card title</h5>
-                                            <p class="card-text">Some quick example text to build...</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="card p-3 bg-black text-secondary d-lg-none">
-                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-light">Card title</h5>
-                                            <p class="card-text">Some quick example text to build...</p>
-                                        </div>
-                                    </div>
-                                </div>
-
+                            <div id="albumSection" class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-3">
+                                
                             </div>
                         </div>
                     </div>
