--- a/album.html
+++ b/album.html
@@ -20,7 +20,7 @@
             <div class="row">
 
                 <!-- SINISTRA -->
-                <div class="col-2 bg-black vh-100">
+                <div class="col-2 bg-black">
                     <div class="row flex-column px-4">
                         <div class="col mb-4">
                             <ul class="list-unstyled">
@@ -124,7 +124,7 @@
 
                 <!-- CENTRO -->
 
-                <div id="center" class="col px-0 text-light vh-100">
+                <div id="center" class="col px-0 text-light vh-100 overflow-scroll mb-0">
                    <!-- <div class="sfondoDinamico">
                         <div class="row row-cols-1 p-3">
                             <div class="col d-flex justify-content-between mb-3">
