--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                                 <li class="text-light fs-2 mb-3">...</li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-house-door-fill text-secondary me-3 fs-4"></i>
-                                    <a class="text-light text-decoration-none align-self-center" href="index.html">Home</a>
+                                    <a class="text-light text-decoration-none align-self-center"
+                                        href="index.html">Home</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-search text-secondary me-3 fs-4"></i>
@@ -157,140 +158,8 @@
                                 </div>
 
                                 <div class="col">
-                                    <div class="row row-cols-12 row-cols-md-3">
-                                        <div class="col p-0">
-                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
-                                                <div class="d-flex flex-wrap card1">
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col p-0">
-                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
-                                                <div class="d-flex flex-wrap card1">
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col p-0">
-                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
-                                                <div class="d-flex flex-wrap card1">
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col p-0">
-                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
-                                                <div class="d-flex flex-wrap card1">
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col p-0">
-                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
-                                                <div class="d-flex flex-wrap card1">
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col p-0">
-                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
-                                                <div class="d-flex flex-wrap card1">
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                    <div class="w-50">
-                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-
+                                    <div id="artistContainer" class="row row-cols-12 row-cols-md-3">
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -300,7 +169,7 @@
                         </div>
                         <div class="col">
                             <div id="albumSection" class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-3">
-                                
+
                             </div>
                         </div>
                     </div>
